--- a/Flask/Templates/register.html
+++ b/Flask/Templates/register.html
@@ -22,9 +22,7 @@
         <header>
             <div class="container">
                 <div id="brand">
-                    <h1>
-                        Taskify!
-                    </h1>
+                    <a href="{{url_for('home')}}"><h1>Taskify!</h1></a>
                 </div>
                 <nav>
                     <ul>
