--- a/Flask/Templates/dashboard.html
+++ b/Flask/Templates/dashboard.html
@@ -42,7 +42,7 @@
                 <div id="calendar_sec">
                     <div id="calendar"></div>
                 </div>
-                <div id="description_sec">
+                <!-- <div id="description_sec">
                     <div id="description-bar">
                         <div class="header">
                             <div class="header-item" style="float:left; margin-left: 10%">
@@ -53,7 +53,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="section">
                 <h3>Tasks</h3>
