--- a/Flask/Static/idex.css
+++ b/Flask/Static/idex.css
@@ -4,13 +4,49 @@ body{
     margin:0 0 0 0;
     height:100%;
     margin: 0%;
+    overflow: hidden;
 }
-.task-container {
-    margin: 0;
-    padding: 2%;
+#main-container {
     display: flex;
-    flex-direction: column;
-    height: 100vh;
+    justify-content: space-between;
+    padding: 1%;
+}
+
+#tasks-container {
+    width: 50%;
+    height: 600px; /* Match the height of the calendar */
+    overflow-y: auto; /* Make the tasks container scrollable */
+    padding-left: 20px; /* Add some padding for better separation */
+}
+
+/* Task Details Modal */
+#task-details-modal {
+    display: none; /* Initially hidden */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50%;
+    padding: 20px;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+}
+
+#task-details-modal h2 {
+    margin-top: 0;
+}
+
+#modal-overlay {
+    display: none; /* Initially hidden */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 999;
 }
 .section {
     margin-bottom: 20px;
@@ -65,6 +101,18 @@ body{
 }
 
 .delete-button:hover {
+    color: darkred;
+}
+
+.delete-button1 {
+    background: none;
+    border: none;
+    color: red;
+    font-size: 1.2em;
+    cursor: pointer;
+}
+
+.delete-button1:hover {
     color: darkred;
 }
 
