--- a/Flask/Templates/dashboard.html
+++ b/Flask/Templates/dashboard.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='idex.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <script src="{{ url_for('static', filename='idex.js') }}" defer></script>
     <script src="{{ url_for('static', filename='moment.min.js') }}" defer></script>
     <script src="{{ url_for('static', filename='calendar.js') }}" defer></script>
     <title>Dashboard</title>
@@ -87,5 +86,12 @@
     <a href="{{ url_for('discussion_board') }}" id="fixed-round-button">
         <img src="{{ url_for('static', filename='images/chat.png') }}" alt="Button Image">
     </a>
+    <script>
+        var events = {{ events | tojson }};
+        document.addEventListener('DOMContentLoaded', function() {
+            var calendar = new Calendar('#calendar', events);
+        });
+    </script>
+    <script src="{{ url_for('static', filename='idex.js') }}" defer></script>
 </body>
 </html>
