--- a/Flask/Static/idex.css
+++ b/Flask/Static/idex.css
@@ -14,14 +14,14 @@ body{
 
 #tasks-container {
     width: 50%;
-    height: 600px; /* Match the height of the calendar */
-    overflow-y: auto; /* Make the tasks container scrollable */
-    padding-left: 20px; /* Add some padding for better separation */
+    height: 600px;
+    overflow-y: auto; 
+    padding-left: 20px; 
 }
 
 /* Task Details Modal */
 #task-details-modal {
-    display: none; /* Initially hidden */
+    display: none; 
     position: fixed;
     top: 50%;
     left: 50%;
@@ -143,3 +143,4 @@ body{
 #fixed-round-button:hover {
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.3);
 }
+
