--- a/Flask/templates/completed_tasks.html
+++ b/Flask/templates/completed_tasks.html
@@ -41,7 +41,7 @@
             <h3>Tasks</h3>
             <ul id="tasks-list">
                 {% for task in tasks %}
-                    <li class="task-item"
+                    <li class="task-item-c"
                         data-type="{{ task['type'] }}"
                         data-task="{{ task['task'] }}"
                         data-start-date="{{ task['dateOfTaskStart'] }}"
